--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -25,16 +25,11 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-
-.app-header h1 {
-  font-family: 'Pacifico', cursive;
+  min-height: 100vh; /* Use viewport height to ensure it covers the full height of the screen */
+  width: 100%;
   text-align: center;
-  font-size: 48px;
-  padding: 20px;
-  background-color: #00A3A9; /* you can change this color to suit your design */
-  color: #D4AA3A; /* choose a color that fits your design */
+  padding-top: 0px; /* Adjust this value to the height of the header */
 }
+
 
 /* Additional styling for your app, if any */
