--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,8 +1,14 @@
-.app-header {
-    background-color: #00A3A9; /* Choose your color */
-    padding: 10px 0;
+.app-header h1 {
+    font-family: 'Pacifico', cursive;
     text-align: center;
-    color: white;
-    /* Add more styling as needed */
+    font-size: 48px;
+    padding: 48px;
+    background-color: #00A3A9; /* you can change this color to suit your design */
+    color: #D4AA3A; /* choose a color that fits your design */
+
+    position: fixed; /* This makes the header fixed */
+    top: 0; /* This pins the header to the top of the screen */
+    left: 0; /* This ensures the header spans from the left edge */
+    width: 100%; /* This ensures the header spans the full width of the screen */
+    z-index: 1; /* This ensures the header is above other content */
   }
-  
