--- a/frontend/src/components/Auth/Login/Login.css
+++ b/frontend/src/components/Auth/Login/Login.css
@@ -37,6 +37,11 @@
   .login-container button:hover {
     background-color: #006770; /* slightly lighter teal for the button when hover*/
   }
+
+  .login-container button:disabled {
+    background-color: #ccc; /* Grey out the button when disabled */
+    cursor: not-allowed;
+  }
   
 
   /* Add styles for the prompt text and the button */
