--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,11 +1,14 @@
 .app-footer {
     background-color: #003B46; /* Darker shade for contrast */
-    padding: 10px 0;
+    padding: 2px 0;
+    font-size: 12px;
     text-align: center;
     color: white;
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 20px; /* Adjust this value based on your header/footer height */
+    flex-shrink: 0; /* Prevents the header/footer from shrinking */
     /* Add more styling as needed */
   }
   
