--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .app-header h1 {
     font-family: 'Pacifico', cursive;
     text-align: center;
-    font-size: 48px;
-    padding: 48px;
+    font-size: 35px;
+    padding: 10px 0;
     background-color: #00A3A9; /* you can change this color to suit your design */
     color: #D4AA3A; /* choose a color that fits your design */
 
@@ -10,5 +10,7 @@
     top: 0; /* This pins the header to the top of the screen */
     left: 0; /* This ensures the header spans from the left edge */
     width: 100%; /* This ensures the header spans the full width of the screen */
+    height: 60px; /* Adjust this value based on your header/footer height */
+    flex-shrink: 0; /* Prevents the header/footer from shrinking */
     z-index: 1; /* This ensures the header is above other content */
   }
