--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
     text-align: center;
     color: white;
     position: absolute;
-    bottom: 0;
+    bottom: 0; /* Stick to the bottom */
     width: 100%;
     height: 20px; /* Adjust this value based on your header/footer height */
     flex-shrink: 0; /* Prevents the header/footer from shrinking */
