--- a/frontend/src/components/List/List.css
+++ b/frontend/src/components/List/List.css
@@ -49,22 +49,7 @@
     height: 100%;
     /* Adjust padding and other properties as needed to fit the button */
   }
-  
-  .collapse-toggle-btn {
-    position: absolute;
-    top: 5px;
-    left: -14px; /* Position the button to the top right corner of the list */
-    transform: translateX(100%); /* Move it all the way to the right of the list's border */
-    z-index: 3; /* Ensure it's above the list content */
-    /* Style the button */
-    background-color: #008C8B; /* Lighter teal for the button */
-    color: #fff; /* White text color */
-    padding: 0px 5px; /* Padding around the text */
-    border: none; /* No border */
-    border-radius: 4px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-  }
- 
+
   .collapsed-content {
     /* Hide all children except for the collapse button */
     > :not(.collapse-toggle-btn) {
@@ -72,3 +57,22 @@
     }
   }
   
+  .collapse-toggle-btn {
+    position: absolute;
+    top: 7px;
+    left: -11px; /* Position the button to the top right corner of the list */
+    transform: translateX(100%); /* Move it all the way to the right of the list's border */
+    z-index: 3; /* Ensure it's above the list content */
+    /* Style the button */
+    background-color: #008C8B; /* Lighter teal for the button */
+    color: #fff; /* White text color */
+    padding: 0px 4px; /* Padding around the text */
+    border: none; /* No border */
+    border-radius: 4px; /* Rounded corners */
+    cursor: pointer; /* Pointer cursor on hover */
+  }
+  
+  .collapse-toggle-btn:hover {
+    background-color: #006770; /* Lighter color on hover */
+  }
+
