--- a/frontend/src/components/List/List.css
+++ b/frontend/src/components/List/List.css
@@ -111,3 +111,22 @@
 .list h2:hover {
   animation: pulse 1s ease-in-out infinite;
 }
+
+
+
+.list-description-edit {
+  width: 100%;
+  margin-top: 5px;
+  padding: 5px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.list-description-view {
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
