--- a/frontend/src/components/ListContainer/ListContainer.css
+++ b/frontend/src/components/ListContainer/ListContainer.css
@@ -20,17 +20,23 @@
 
   .add-list-container {
     flex-shrink: 0; /* Prevent the add-list-container from shrinking */
+    width: 300px;
     display: flex;
-    align-items: center; /* Align the input and button vertically */
+    flex-direction: column; /* Stack children vertically */
+    align-items: center;
+    padding: 10px;
     /* ... other styles ... */
   }
 
-  .add-list-input {
-    padding: 5px;
-    margin-right: 5px;
-    border-radius: 4px;
-    border: none;
+  .add-list-input,
+  .add-list-description {
+    width: 100%; /* Full width of the container */
+    margin-bottom: 10px; /* Space between input and the next element */
+    padding: 8px; /* Padding inside the input and textarea */
+    border: 1px solid #ccc; /* Border style */
+    border-radius: 4px; /* Rounded corners */
   }
+
   
   .add-list-btn {
     background-color: #008C8B; /* Lighter teal for the button */
