--- a/frontend/src/components/TaskContainer/TaskContainer.css
+++ b/frontend/src/components/TaskContainer/TaskContainer.css
@@ -1,15 +1,28 @@
 /* TaskContainer.css */
 .task-container {
+    position: relative; /* relative positioning here */
     margin-top: 20px;
-    max-height: 600px; /* Adjust based on your design */
+    flex-direction: column;
+    justify-content: flex-start; /* Aligns children to the start */
     overflow-y: auto; /* Enables vertical scrolling if content overflows */
+    flex-grow: 1; /* Allows task container to fill available space in the list*/
   }
   
+  .task-list {
+    flex-grow: 1; /* Allows task content to fill available space */
+    overflow-y: auto; /* Keeps the task list scrollable */
+  }
+
   .add-task-input-container {
+    position: sticky; /* sticky positioning */
+    position: -webkit-sticky; /* For Safari */
+    top: 360px;
+    bottom: 0; /* Aligns the container to the bottom */
+    left: 0; /* Aligns the container to the left */
+    width: 100%; /* Ensure it spans the full width */
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
-    height: auto;
+    height: 30px;
   }
   
   .add-task-input {
