--- a/frontend/src/components/Task/Task.css
+++ b/frontend/src/components/Task/Task.css
@@ -3,10 +3,29 @@
     background-color: #005960; /* Slightly darker teal color */
     color: #fff;
     margin: 10px 0;
-    padding: 15px;
+    padding: 10px;
     border-radius: 4px;
+    text-align: left; /* Align text to the left */
   }
   
+  .task-header {
+    display: flex; /* Use flexbox to align children */
+    align-items: center; /* Align vertically */
+    justify-content: space-between; /* Space out title and buttons */
+  }
+  
+  .task-title {
+    flex: 1; /* Allows the title to grow and fill the space */
+    margin: 0; /* Adjust margins as needed */
+    /* Additional styling for the title */
+  }
+
+  .task-del-edit-box{
+    display: flex; /* Use flexbox for the button container too */
+    gap: 5px; /* If you want some space between the buttons */
+
+  }
+
   .task.completed {
     background-color: #3B9778; /* Different color to indicate completion */
     text-decoration: line-through;
@@ -16,19 +35,32 @@
     cursor: pointer; /* If you want the title to toggle completion */
   }
   
-  .edit-task-btn, .delete-task-btn {
+  .task p {
+    margin-left: 0px; /* Align headers and paragraphs to the left */
+    font-size: 12px;
+  }
+
+  .edit-task-btn {
     background-color: #008C8B; /* Lighter teal for buttons */
     color: #fff;
-    padding: 5px 10px;
+    padding: 2px 4px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-right: 10px;
+    margin-right: 4px;
+    margin-left: 10px;
   }
   
   .delete-task-btn {
     background-color: #C44D58; /* Red color for delete button */
+    color: #fff;
+    padding: 2px 4px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 5px;
   }
+  
   
   .edit-task-btn:hover,
   .delete-task-btn:hover {
